modules/gdscript/tests/scripts/parser/errors/variadic_func_static_init.gd
static func _static_init(...args) -> void:
	pass

func test():
	pass
